Avoid tooltip flicker

--- a/src/ui/popover.styl
+++ b/src/ui/popover.styl
@@ -27,13 +27,12 @@ $popover-arrow-indent-factor = 0.7;
     --popover-border: none; // 1px solid #dddddd;
     --popover-shadow: rgba(15, 15, 15, 0.2) 0 9px 24px;
 
+    // --popover-shadow: rgba(15, 15, 15, 0.05) 0 0 0 1px, rgba(15, 15, 15, 0.1) 0 3px 6px, rgba(15, 15, 15, 0.2) 0 9px 24px;
     .dark & {
       --popover-background: black; // rgba(118, 118, 118, 1);
     }
 
-    // --popover-shadow: rgba(15, 15, 15, 0.05) 0 0 0 1px, rgba(15, 15, 15, 0.1) 0 3px 6px, rgba(15, 15, 15, 0.2) 0 9px 24px;
-    // font-size 13
-    // font-weight normal
+    pointer-events: none; // avoids flicker
     padding: px(4) px(8);
     border-radius: px(4);
     white-space: nowrap;
